# deutsche-tkm-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  RAG_WORKFLOW.md  README.md  README_DEPLOY.md  docker-compose.dev.yml  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci-python.yml  ci.yml  deploy-react.yml  deploy.yml
.streamlit/: config.toml
api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
api/utils/: __init__.py  dependencies.py
assets/: index-B2R2VPYW.css  index-B6qEnjxQ.js  index-BHfNxR-2.js  index-BI0mLiZP.js  index-C1cX39zF.js  index-CCw7txGU.js  index-CEQN0vl2.js  index-CGZewi9o.css  index-CTH9MvA5.js  index-CXE0rLGU.js  index-CqaA0EOC.css  index-CyGxS8lS.js  index-DDTKhStA.js  index-PGtcskBG.js  index-R4ScyiWV.js
config/: __init__.py  settings.py
core/: __init__.py  chunking.py  embeddings.py  huggingface_manager.py  retrieval.py
core/utils/: __init__.py  imports.py
data/: loader.py  metadata.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
llm/: __init__.py  generation.py  model_manager.py  prompt_manager.py
loaders/: __init__.py  loader.py  metadata.py
monitoring/: __init__.py  logging.py  metrics.py  tracing.py
notebooks/: 01_workflow_and_backlog.ipynb
react/: .env.example  .eslintignore  .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
react/src/: App.tsx  index.css
react/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
react/src/components/ChatContainer/: ChatContainer.tsx  constants.ts
react/src/components/ChatContainer/components/: LoadingIndicator.tsx
react/src/lib/: api.ts
react/src/pages/: Index.tsx
react/src/types/: chat.ts
scripts/: __init__.py  check_needs_ingestion.py  dev_check.py  ingest.py  rebuild_index.py
tests/: test_api_smoke.py  test_retrieval.py
ui/: streamlit_app.py
