[tool.poetry]
name = "deutsche-telekom-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation assistant for Deutsche Telekom press releases"
authors = ["Karoly Gergely <karolygergely86@gmail.com>"]
readme = "README.md"
packages = [{include = "config"}, {include = "core"}, {include = "loaders"}, {include = "llm"}, {include = "monitoring"}, {include = "api"}, {include = "ui"}, {include = "scripts"}]

[tool.poetry.dependencies]
accelerate = ">=0.30"
bitsandbytes = ">=0.48.2"
python = "^3.10"
streamlit = ">=1.35"
transformers = ">=4.43"
torch = ">=2.3"
langchain = ">=0.2"
langchain-community = ">=0.2"
langchain-core = ">=0.2"
chromadb = ">=0.5"
sentence-transformers = ">=3.0"
pydantic-settings = ">=2.2"
faiss-cpu = ">=1.8"
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
opentelemetry-sdk = ">=1.26"
opentelemetry-instrumentation-fastapi = ">=0.47b0"
pypdf = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
ruff = "*"
black = "*"
isort = "*"

[tool.poetry.scripts]
check-needs-ingestion = "scripts.check_needs_ingestion:main"
ingest = "scripts.ingest:main"
rebuild-index = "scripts.rebuild_index:main"
dev-check = "scripts.dev_check:main"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.chroma
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*.chroma/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"notebooks/*.ipynb" = ["E402"]  # module level import not at top of cell (common in notebooks)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
